fix: added spacing between input fields

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@
 
 .App-form input{
   display: flex;
-  margin: auto;
+  margin: 10px auto;
+  padding: 5px;
 }
 
 
